Fix linked collapses

--- a/assets/sb-admin/css/components/forms/_filter.scss
+++ b/assets/sb-admin/css/components/forms/_filter.scss
@@ -67,7 +67,7 @@ $input-group-prepend-length: 60px;
 }
 
 
-#collapse-filter {
+#collapse-filters {
     .btn {
         .less-filter {
             display: none;
